--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -1,13 +1,67 @@
 {% block content %} {% load static %}
 
-<div class="header__nav">
-  <ul>
-    <a href=""><li>Home</li></a>
-    <a href=""><li>About</li></a>
-    <a href=""><li>Login</li></a>
-    <a href=""><li>Register</li></a>
-    <a href=""><li>Contact Us</li></a>
-  </ul>
-</div>
-
+<!-- <nav class="navbar bg-primary" data-bs-theme="dark">
+  Navbar content
+  <div class="header__nav">
+    <ul>
+      <a href=""><li>Home</li></a>
+      <a href=""><li>About</li></a>
+      <a href=""><li>Login</li></a>
+      <a href="{% url 'register' %}"><li>Register</li></a>
+      <a href=""><li>Contact Us</li></a>
+    </ul>
+  </div>
+</nav> -->
+<!--  -->
+<!--  -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <div class="dis">
+      <img src="{% static 'images/secretariat.png' %}" alt="" />
+    </div>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'home' %}"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Us</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="{% url 'register' %}"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Register
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="{% url 'register' %}">Register</a>
+            </li>
+            <li><a class="dropdown-item" href="#">Login</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 {% endblock content %}
