--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -21,6 +21,8 @@
       </div> -->
     </nav>
 
+    
+
     <!--  -->
     <!--  -->
     {% endblock content %}
@@ -44,5 +46,18 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
+    <script>
+      $(document).ready(function () {
+        // messages timeout for 10 sec
+        setTimeout(function () {
+          $(".message").fadeOut("slow");
+        }, 10000); // <-- time in milliseconds, 1000 =  1 sec
+
+        // delete message
+        $(".del-msg").live("click", function () {
+          $(".del-msg").parent().attr("style", "display:none;");
+        });
+      });
+    </script>
   </body>
 </html>
