--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -4,7 +4,9 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <div class="dis">
-      <img src="{% static 'images/secretariat.png' %}" alt="" />
+      <a href="{% url 'home' %}">
+        <img src="{% static 'images/secretariat.png' %}" alt="" />
+      </a>
     </div>
     <button
       class="navbar-toggler"
@@ -30,11 +32,35 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+        </li>
+        <!-- dropdown menu for registrations -->
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="{% url 'register' %}"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Registrations
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="">Marriage Thanksgiving</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="">Birth Notification</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="">Child Dedication</a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout-page' %}">Logout</a>
         </li>
+        <!-- end of dropdown menu for registrations -->
         {% else %}
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
@@ -50,7 +76,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
