--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -1,6 +1,17 @@
-{% extends 'base/main.html' %}
-{% block content %}
+{% extends 'base/main.html' %} {% block content %}
 
 <h1>Contact section</h1>
+
+<br />
+
+<div>
+  <div>
+    <span class="border border-3" id="icons">
+      <img
+        src="https://img.icons8.com/ios-filled/50/null/place-marker--v1.png" class="iconing"
+      />
+    </span>
+  </div>
+</div>
 
 {% endblock content %}
