--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>CandSYF Secretariat</title>
   </head>
   <body>
@@ -20,8 +24,6 @@
         <img src="{% static 'images/secretariat.png' %}" alt="" />
       </div> -->
     </nav>
-
-    
 
     <!--  -->
     <!--  -->
