--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -20,7 +20,7 @@
   <!--  -->
   <div class="distl">
     <div>
-      <i class="bx bxs-location-plus"></i>
+      <i class="bx bx-headphone"></i>
       <h4>Phone Number</h4>
       <h6>(+234) xxx-xxx-xxx</h6>
       <h6>(+234) xxx-xxx-xxx</h6>
@@ -30,7 +30,7 @@
   <!--  -->
   <div class="distl">
     <div>
-      <i class="bx bxs-location-plus"></i>
+      <i class="bx bx-envelope"></i>
       <h4>Email Address</h4>
       <h6>info@candsyf.org</h6>
       <br />
