--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <div class="dis">
-      <a href="{% url 'home' %}">
+      <a href="{% url 'home'%}">
         <img src="{% static 'images/secretariat.png' %}" alt="" />
       </a>
     </div>
@@ -29,7 +29,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
@@ -38,7 +38,7 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
-            href="{% url 'register' %}"
+            href="{% url 'registration' %}"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -47,7 +47,9 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="">Marriage Thanksgiving</a>
+              <a class="dropdown-item" href="{% url 'marriage_thanksgiving' %}"
+                >Marriage Thanksgiving</a
+              >
             </li>
             <li>
               <a class="dropdown-item" href="">Birth Notification</a>
