Work on birth notification

--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -52,7 +52,9 @@
               >
             </li>
             <li>
-              <a class="dropdown-item" href="">Birth Notification</a>
+              <a class="dropdown-item" href="{% url 'birth_notification' %}"
+                >Birth Notification</a
+              >
             </li>
             <li>
               <a class="dropdown-item" href="">Child Dedication</a>
