Work on database for birth notifications

--- a/registrations/templates/registrations/birth_notification.html
+++ b/registrations/templates/registrations/birth_notification.html
@@ -3,6 +3,7 @@
 <h6>Birth Notification</h6>
 
 <form action="" method="POST">
+  {% csrf_token %}
   <fieldset>
     <legend>Birth Notification</legend>
     {{forms|crispy}}
