--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -57,7 +57,9 @@
               >
             </li>
             <li>
-              <a class="dropdown-item" href="">Child Dedication</a>
+              <a class="dropdown-item" href="{% url 'child_dedication' %}"
+                >Child Dedication</a
+              >
             </li>
           </ul>
         </li>
