add unit fields

--- a/registrations/templates/registrations/child_dedication.html
+++ b/registrations/templates/registrations/child_dedication.html
@@ -5,7 +5,7 @@
   {% csrf_token %}
   <fieldset>
     <legend>Come Register</legend>
-    {{form|cripsy}}
+    {{form|crispy}}
   </fieldset>
 </form>
 
