--- a/registrations/templates/registrations/child_dedication.html
+++ b/registrations/templates/registrations/child_dedication.html
@@ -6,7 +6,11 @@
   <fieldset>
     <legend>Come Register</legend>
     {{form|crispy}}
+    <br />
+    <label for="">Date of Dedication</label>
+    <input type="date" name="" id="" />
   </fieldset>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 {% endblock content %}
