--- a/registrations/templates/registrations/birth_notification.html
+++ b/registrations/templates/registrations/birth_notification.html
@@ -2,14 +2,17 @@
 
 <h6>Birth Notification</h6>
 
-<form action="" method="POST">
-  {% csrf_token %}
-  <fieldset>
-    <legend>Birth Notification</legend>
-    {{forms|crispy}}
-    <br />
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </fieldset>
-</form>
+<div>
+  <form action="" method="POST">
+    {% csrf_token %}
+    <fieldset>
+      <legend>Birth Notification</legend>
+      {{forms|crispy}}
+      <br />
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </fieldset>
+  </form>
+  <a href="{% url 'abort' %}"><button class="btn btn-danger">Cancel</button></a>
+</div>
 
 {% endblock content %}
