--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -25,6 +25,104 @@
       </div> -->
     </nav>
 
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="card mb-3" style="max-width: 540px">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="{% static 'images/secretariat.png' %}"
+              class="img-fluid rounded-start"
+              alt="..."
+              style="object-fit: cover"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">Marriage Thanksgiving</h3>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <a href="{% url 'marriage_thanksgiving' %}">
+                  <button class="btn btn-primary">
+                    Click here to register
+                  </button>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- second -->
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="card mb-3" style="max-width: 540px">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="{% static 'images/secretariat.png' %}"
+              class="img-fluid rounded-start"
+              alt="..."
+              style="object-fit: cover"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">Birth Notification</h3>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <a href="{% url 'birth_notification' %}">
+                  <button class="btn btn-primary">
+                    Click here to register
+                  </button>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ending of second -->
+    <!--  third -->
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="card mb-3" style="max-width: 540px">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="{% static 'images/secretariat.png' %}"
+              class="img-fluid rounded-start"
+              alt="..."
+              style="object-fit: cover"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">Child Dedication</h3>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <a href="{% url 'child_dedication' %}">
+                  <button class="btn btn-primary">
+                    Click here to register
+                  </button>
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ending of third -->
+
     <!--  -->
     <!--  -->
     {% endblock content %}
