--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -5,7 +5,7 @@
   <div class="container-fluid">
     <div class="dis">
       <a href="{% url 'home'%}">
-        <img src="{% static 'images/secretariat.png' %}" alt="" />
+        <img src="{% static 'images/secretariat.png' %}" alt="" class="imme" />
       </a>
     </div>
     <button
