--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -40,9 +40,8 @@
             <div class="card-body">
               <h3 class="card-title">Marriage Thanksgiving</h3>
               <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                This is the official record of taking marriage thanksgiving for
+                the Youth Fellowship Secretariat Unit
               </p>
               <p class="card-text">
                 <a href="{% url 'marriage_thanksgiving' %}">
@@ -72,9 +71,8 @@
             <div class="card-body">
               <h3 class="card-title">Birth Notification</h3>
               <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                This is the official record of taking Birth Notification for the
+                Youth Fellowship Secretariat Unit
               </p>
               <p class="card-text">
                 <a href="{% url 'birth_notification' %}">
@@ -105,9 +103,8 @@
             <div class="card-body">
               <h3 class="card-title">Child Dedication</h3>
               <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                This is the official record of taking Child Dedication for the
+                Youth Fellowship Secretariat Unit
               </p>
               <p class="card-text">
                 <a href="{% url 'child_dedication' %}">
