--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -47,19 +47,22 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="{% url 'marriage_thanksgiving' %}"
+              <a class="dropdown-item" href="{% url 'marriage_thanks' %}"
                 >Marriage Thanksgiving</a
               >
             </li>
             <li>
-              <a class="dropdown-item" href="{% url 'birth_notification' %}"
+              <a class="dropdown-item" href="{% url 'all_birth' %}"
                 >Birth Notification</a
               >
             </li>
             <li>
-              <a class="dropdown-item" href="{% url 'child_dedication' %}"
+              <a class="dropdown-item" href="{% url 'all_child' %}"
                 >Child Dedication</a
               >
+            </li>
+            <li>
+              <a class="dropdown-item" href="">View all Registrations</a>
             </li>
           </ul>
         </li>
