--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -30,7 +30,7 @@
         <div class="row g-0">
           <div class="col-md-4">
             <img
-              src="{% staticfiles 'images/secretariat.png' %}"
+              src="{% static 'images/secretariat.png' %}"
               class="img-fluid rounded-start"
               alt="..."
               style="object-fit: cover"
@@ -61,7 +61,7 @@
         <div class="row g-0">
           <div class="col-md-4">
             <img
-              src="{% staticfiles 'images/secretariat.png' %}"
+              src="{% static 'images/secretariat.png' %}"
               class="img-fluid rounded-start"
               alt="..."
               style="object-fit: cover"
@@ -93,7 +93,7 @@
         <div class="row g-0">
           <div class="col-md-4">
             <img
-              src="{% staticfiles 'images/secretariat.png' %}"
+              src="{% static 'images/secretariat.png' %}"
               class="img-fluid rounded-start"
               alt="..."
               style="object-fit: cover"
